# PyWeb3Wallet

./: .gitignore  .pre-commit-config.yaml  README.md  cliff.toml  development_notes.md  hello.py  mypy.ini  pyproject.toml
.github/workflows/: build.yml
src/bitcoin/: __init__.py  hdwallet_demo.py  mnemonic_demo.py
src/ethereum/: hex_to_decimal.py  web3_demo.py
src/tests/: __init__.py
tests/unit/: __init__.py
